# commentai-rs

./: .gitignore  Cargo.toml  README.md
commentai-rs-actors/: Cargo.toml
commentai-rs-actors/src/: cli.rs  db.rs  lib.rs  local_codec.rs  local_tcp.rs
commentai-rs-cli/: Cargo.toml
commentai-rs-cli/src/: main.rs
commentai-rs-data/: Cargo.toml
commentai-rs-data/src/: lib.rs
commentai-rs-server/: Cargo.toml
commentai-rs-server/src/: main.rs
commentai-rs-sqlite/: .env  Cargo.toml
commentai-rs-sqlite/migrations/2020-05-10-152850_create_comments/: up.sql
commentai-rs-sqlite/src/: lib.rs  models.rs  schema.rs
