[package]
name = "commentai-rs-actors"
version = "0.1.0"
authors = ["kreako <olivier@kreako.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-rt = "1.1.0"
futures = "0.3.4"
serde = { version = "1.0.110", features = ["derive"] }
bytes = "0.5.4"
byteorder = "1.3.4"
tokio = { version = "0.2.20", features = ["sync"] }
tokio-util = "0.3.1"
serde_json = "1.0.52"
commentai-rs-data = { path = "../commentai-rs-data" }
commentai-rs-sqlite = { path = "../commentai-rs-sqlite" }
