[package]
name = "commentai-rs-cli"
version = "0.1.0"
authors = ["kreako <olivier@kreako.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix = "0.9.0"
structopt = "0.3.14"
tokio = { version = "0.2.20", features = ["full"] }
tokio-util = "0.3.1"
commentai-rs-data = { path = "../commentai-rs-data" }
commentai-rs-sqlite = { path = "../commentai-rs-sqlite" }
commentai-rs-actors = { path = "../commentai-rs-actors" }
