[package]
name = "commentai-rs-server"
version = "0.1.0"
authors = ["kreako <olivier@kreako.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.0"
listenfd = "0.3.3"
actix = "0.9.0"
dotenv = "0.15.0"
serde = { version = "1.0.110", features = ["derive"] }
chrono = { version = "0.4.11", features = ["serde"] }
commentai-rs-data = { path = "../commentai-rs-data" }
commentai-rs-sqlite = { path = "../commentai-rs-sqlite" }
commentai-rs-actors = { path = "../commentai-rs-actors" }
