[package]
name = "commentai-rs-sqlite"
version = "0.1.0"
authors = ["kreako <olivier@kreako.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
commentai-rs-data = { path = "../commentai-rs-data" }
serde = { version = "1.0.110", features = ["derive"] }
thiserror = "1.0.16"
